# Valoro

./: README.md  meson.build
data/: com.felixbrezo.Valoro.appdata.xml.in  com.felixbrezo.Valoro.desktop.in
doc/: HACKING.md
doc/img/: class_diagram.txt
doc/support/en/: README.md
doc/support/es/: README.md
po/: LINGUAS  POTFILES  ca.po  com.felixbrezo.Valoro.pot  en.po  es.po
src/: Application.vala  Window.vala
src/Utils/: AccountingEntry.vala  Asset.vala  Movement.vala  Numbers.vala  Operation.vala
src/Views/: MainView.vala  NewLogbookView.vala  WelcomeView.vala
src/Widgets/: AccountingTable.vala  AssetDialog.vala  AssetPanel.vala  HeaderBar.vala  OperationDialog.vala  OperationsTable.vala  SettingsMenu.vala
